--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
+      <ng-container *ngIf="authService.loggedIn();else loggedIn">
       <li class="nav-item">
         <a class="nav-link" href="#"></a>
       </li>
@@ -20,6 +21,18 @@
       <li class="nav-item">
         <a class="nav-link" href="#"></a>
       </li>
+    </ng-container>
+    <ng-template #loggedIn>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Add raspi</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Profile</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" (click) = authService.logout()  style= "cursor:pointer" href="#">Log Out</a>
+    </li>
+  </ng-template>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
         <div class="dropdown-menu">
