--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <ng-container *ngIf="authService.loggedIn();else loggedIn">
+      <ng-container *ngIf="authService.isLoggedIn();else loggedIn">
       <li class="nav-item">
         <a class="nav-link" href="#"></a>
       </li>
@@ -30,7 +30,7 @@
       <a class="nav-link" href="#">Profile</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click) = authService.logout()  style= "cursor:pointer" href="#">Log Out</a>
+      <a class="nav-link" (click) = authService.logOut()  style= "cursor:pointer" href="#">Log Out</a>
     </li>
   </ng-template>
       <li class="nav-item dropdown">
