--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -7,10 +7,10 @@
             <div class="card-body">
                 <form (submit)="signIn()">
                     <div class="form-group">
-                        <input type="text" [(ngModel)]="user.email" name="email" class="form-control" placeholder="Email" required autofocus>
+                        <input type="text" [(ngModel)]="credentials.email" name="email" class="form-control" placeholder="Email" required autofocus>
                     </div>
                     <div class="form-group">
-                        <input type="password" [(ngModel)]="user.password" name="password" class="form-control" placeholder="Password" required>
+                        <input type="password" [(ngModel)]="credentials.password" name="password" class="form-control" placeholder="Password" required>
                     </div>
                     <button class="btn btn-success btn-block">
                         Sign In
