--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -5,15 +5,15 @@
                 Sign Up
             </div>
             <div class="card-body">
-                <form (submit)="signUp()">
+                <form (submit)="register()">
                     <div class="form-group">
-                        <input type="text" [(ngModel)]="user.email" name="email" class="form-control" placeholder="Email" required autofocus>
+                        <input type="text" [(ngModel)]="credentials.email" name="email" class="form-control" placeholder="Email" required autofocus>
                     </div>
                     <div class="form-group">
-                        <input type="text" [(ngModel)]="user.username" name="username" class="form-control" placeholder="username" required autofocus>
+                        <input type="text" [(ngModel)]="credentials.name" name="name" class="form-control" placeholder="username" required autofocus>
                     </div>
                     <div class="form-group">
-                        <input type="password" [(ngModel)]="user.password" name="password" class="form-control" placeholder="Password" required>
+                        <input type="password" [(ngModel)]="credentials.password" name="password" class="form-control" placeholder="Password" required>
                     </div>
                     <button class="btn btn-primary btn-block">
                         Sign Up
