--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <ng-container *ngIf="authService.isLoggedIn();else loggedIn">
+      <ng-container *ngIf="authService.loggedIn();else loggedIn">
       <li class="nav-item">
         <a class="nav-link" href="#"></a>
       </li>
