login sign up funcionando

--- a/src/app/components/private-tasks/private-tasks.component.html
+++ b/src/app/components/private-tasks/private-tasks.component.html
@@ -1,1 +1,12 @@
-<p>private-tasks works!</p>
+<div class="row">
+    <div class="col-lg-7 mx-auto ">
+        <div class="jumbotron">
+            <h1 class="display-3">Smart Mirror</h1>
+            <p class="lead">Dashboard</p>
+            <hr class="my-4">
+            <p>Please look up in the menu and select an option </p>
+            <p class="lead">
+                        
+            </p>
+          </div>
+</div>
