--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
   <a class="navbar-brand" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor02">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <ng-container *ngIf="authService.loggedIn();else loggedIn">
+      <ng-container *ngIf="!authService.loggedIn();else loggedIn">
       <li class="nav-item">
         <a class="nav-link" href="#"></a>
       </li>
@@ -22,16 +23,26 @@
         <a class="nav-link" href="#"></a>
       </li>
     </ng-container>
+    
     <ng-template #loggedIn>
+   
     <li class="nav-item">
-      <a class="nav-link" href="#">Add raspi</a>
+      <a class="nav-link"  routerLink="/addRaspi"routerLinkActive="active" href="#">Add raspi</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Profile</a>
+      <a class="nav-link" routerLink="/profile"routerLinkActive="active" href="#">Profile</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/ListRapis"routerLinkActive="active" href="#">List rapis</a>
+    </li>
+  
+  
+    <ng-container>
     <li class="nav-item">
       <a class="nav-link" (click) = authService.logOut()  style= "cursor:pointer" href="#">Log Out</a>
     </li>
+  </ng-container>
+
   </ng-template>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
@@ -44,11 +55,12 @@
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+   <!-- <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search">
       <button class="btn btn-secondary my-2 my-sm-0" type="submit"></button>
-    </form>
+    </form>-->
   </div>
+</div>
 </nav>
   
   <!-- Container element -->
