--- a/src/app/components/add-raspi/add-raspi.component.html
+++ b/src/app/components/add-raspi/add-raspi.component.html
@@ -1,1 +1,20 @@
-<p>add-raspi works!</p>
+<div class="row">
+    <div class="col-md-4 mx-auto">
+        <div class="card">
+            <div class="card-header">
+                Add Raspberry
+            </div>
+            <div class="card-body">
+                <form (submit)="addRaspi()">
+                    
+                    <div class="form-group">
+                        <input type="password" [(ngModel)]="raspi.ref" name="password" class="form-control" placeholder="Enter the reference of you Raspi" required>
+                    </div>
+                    <button class="btn btn-success btn-block">
+                        Sign In
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
