--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
+    
   <a class="navbar-brand" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor02">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item ">
+        <a class="nav-link active" href="#">
           <span class="sr-only">(current)</span>
         </a>
       </li>
@@ -27,13 +28,13 @@
     <ng-template #loggedIn>
    
     <li class="nav-item">
-      <a class="nav-link"  routerLink="/addRaspi"routerLinkActive="active" href="#">Add raspi</a>
+      <a class="nav-link"  routerLink="/addraspi"routerLinkActive="active" href="#">Add raspi</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/profile"routerLinkActive="active" href="#">Profile</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/ListRapis"routerLinkActive="active" href="#">List rapis</a>
+      <a class="nav-link" routerLink="/myraspis"routerLinkActive="active" href="#">My Raspis</a>
     </li>
   
   
