probando nuevos componentesv2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/myraspis"routerLinkActive="active" href="#">My Raspis</a>
     </li>
-  
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/private/configraspi"routerLinkActive="active" href="#">Config raspi</a>
+    </li>
   
     <ng-container>
     <li class="nav-item">
