profile en proceso

--- a/src/app/components/configraspy/configraspy.component.html
+++ b/src/app/components/configraspy/configraspy.component.html
@@ -7,9 +7,9 @@
             <p>Please Sign in and enjoy </p>
             <p class="lead">
             
-              <a class="btn btn-warning" (onclick)= "submitRed()" role="button">Edit Red Button</a>
-              <a class="btn btn-success" (onclick)= "submitGreen()" role="button">Edit Green Button</a>
-              <a class="btn btn-info" (onclick)="submitBlue()" role="button">Edit Blue Button</a>
+              <a class="btn btn-warning" (click)= "submitRed()" role="button">Edit Red Button</a>
+              <a class="btn btn-success" (click)= "submitGreen()" role="button">Edit Green Button</a>
+              <a class="btn btn-info" (click)="submitBlue()" role="button">Edit Blue Button</a>
               
             
             </p>
