--- a/src/app/components/my-raspis/my-raspis.component.html
+++ b/src/app/components/my-raspis/my-raspis.component.html
@@ -1,1 +1,16 @@
-<p>my-raspis works!</p>
+<div class="row">
+    <div class="col-lg-7 mx-auto ">
+        <div class="jumbotron">
+            <h1 class="display-3">Smart Mirror</h1>
+            <p class="lead">No raspis added at this moment</p>
+            <hr class="my-4">
+            <p>Click to add raspi to add your first raspberry</p>
+            <p class="lead">
+            
+              <a class="btn btn-primary btn-lg" routerLink="/addraspi" role="button">Add Raspi</a>
+              
+            
+            </p>
+          </div>
+</div>
+
