--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -4,7 +4,7 @@
             <h1 class="display-3">Smart Mirror</h1>
             <p class="lead">Welcome to your Profile</p>
             <hr class="my-4">
-            <p>P</p>
+            <p>Mr {{username}}</p>
             <p class="lead">
             
               <a class="btn btn-primary btn-lg" routerLink="/signin" role="button">Change Password</a>
