anyadidos change pass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    
+  <ng-container *ngIf="authService.loggedIn();else loghome">
+  <a class="navbar-brand" routerLink="/private" href="#">Home</a>
+</ng-container>
+<ng-template #loghome>
   <a class="navbar-brand" href="#">Home</a>
+</ng-template>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
