--- a/src/app/components/changepasswordfail/changepasswordfail.component.html
+++ b/src/app/components/changepasswordfail/changepasswordfail.component.html
@@ -2,13 +2,13 @@
     <div class="col-lg-7 mx-auto ">
         <div class="jumbotron">
             <h1 class="display-3">Smart Mirror</h1>
-            <p class="lead">Welcome to your Profile</p>
+            <p class="lead">Wrong  password or the new passwords are not the same</p>
             <hr class="my-4">
-            <p>Mr {{username}}</p>
+            <p>You'll be redirectioned to the change password page</p>
             <p class="lead">
             
               <a class="btn btn-primary btn-lg" routerLink="/private/profile/changepassword" role="button">Change Password</a>
-             
+              
             
             </p>
           </div>
