--- a/src/app/components/changepasswordok/changepasswordok.component.html
+++ b/src/app/components/changepasswordok/changepasswordok.component.html
@@ -2,15 +2,14 @@
     <div class="col-lg-7 mx-auto ">
         <div class="jumbotron">
             <h1 class="display-3">Smart Mirror</h1>
-            <p class="lead">Welcome to your Profile</p>
+            <p class="lead">The password has been changed successfully</p>
             <hr class="my-4">
-            <p>Mr {{username}}</p>
+            <p>You'll be redirectioned to the login page</p>
             <p class="lead">
             
-              <a class="btn btn-primary btn-lg" routerLink="/private/profile/changepassword" role="button">Change Password</a>
-             
+              <a class="btn btn-primary btn-lg" routerLink="/signin" role="button">signin</a>
+              
             
             </p>
           </div>
 </div>
-
