radio buttons funcionando

--- a/src/app/components/add-raspi/add-raspi.component.html
+++ b/src/app/components/add-raspi/add-raspi.component.html
@@ -14,7 +14,7 @@
                         <input type="password" [(ngModel)]="raspi.pin" name="pin" class="form-control" placeholder="Enter a pin for your Raspi" required>
                     </div>
                     <button class="btn btn-success btn-block">
-                        Sign In
+                        Add Raspi
                     </button>
                 </form>
             </div>
