--- a/src/app/components/configraspy/configraspy.component.html
+++ b/src/app/components/configraspy/configraspy.component.html
@@ -5,10 +5,11 @@
             <p class="lead">Raspberry configuration</p>
             <hr class="my-4">
             <p>Please select a Raspi and a button to configure </p>
-            <div class="form-group">
-              <label for="exampleSelect1" class="form-label mt-4"></label>
-              <select class="form-select" id="exampleSelect1">
-                <option>No raspis added</option>
+            <div class="form-group"*ngFor = "let raspi of raspis;let i = index "[atr.data-index]="i">
+              
+              <label for="exampleSelect{{i}}" class="form-label mt-4"></label>
+              <select class="form-select"  id="exampleSelect1">
+                <option value="{{raspi.serial_number}}"(change)=selectChangeHandler($event)>{{raspi.serial_number}}</option>
                
               </select>
             </div>
