--- a/src/app/components/my-raspis/my-raspis.component.html
+++ b/src/app/components/my-raspis/my-raspis.component.html
@@ -29,7 +29,7 @@
             <p class="lead">
             
               <a class="btn btn-secondary btn-lg" routerLink="/addraspi" role="button">Add Raspi</a>
-              <a class="btn btn-primary btn-lg" routerLink="/addraspi" role="button">Delete Raspi</a>
+              <a class="btn btn-primary btn-lg"  role="button">Delete Raspi</a>
               
             
             </p>
